--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google" content="notranslate">
   <title>Galeria de Preset Lightroom</title>
-  <link rel="stylesheet" href="/web/Estilos Mijo/estilos.css">
+  <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
@@ -431,6 +431,6 @@
             </div>
         </div>
     </main>
-    <script src="/web/Lo que mueve esta vaina/funcion.js"></script>
+    <script src="funcion.js"></script>
 </body>
 </html>
