correcion de imagenes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="card show">
             <h3>Old School</h3>
             <p class="status">Preset</p>
-            <img src="/imagenes/Old School/Old school .jpg" alt="Filtro 1" data-original="/imagenes/Old School/Original.jpg" data-filtered="/imagenes/Old School/Old school .jpg">
+            <img src="C:\Users\FOOR\Downloads\Filtros free\imagenes\Old School\Old school .jpg" alt="Filtro 1" data-original="C:\Users\FOOR\Downloads\Filtros free\imagenes\Old School\Original.jpg" data-filtered="C:\Users\FOOR\Downloads\Filtros free\imagenes\Old School\Old school .jpg">
             <div class="button-group">
                 <a href="https://cuty.io/oldscholl" target="blank">Descargar</a>
             </div>
