imagen de lupa prueba

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
         <h1>Presets Lightroom</h1>
         <div class="search-icon" onclick="toggleSearch()">
-    <img src="/lupa de búsqueda/lupa.png" alt="Buscar">
+    <img src="lupa de búsqueda/lupa.png" alt="Buscar">
       </div>
       
         <div class="menu-container" id="menu-container">
