--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <div class="card">
             <h3>Cinematic V2</h3>
             <p class="status">Preset</p>
-            <img src="imagenes/Cinematic V2 /Cinematic V2.jpg" alt="Filtro 43" data-original="imagenes/Cinematic V2 /Cinematic V2 Original.jpg" data-filtered="imagenes/Cinematic V2 /Cinematic V2.jpg">
+            <img src="imagenes/Cinematic V2/Cinematic V2.jpg" alt="Filtro 43" data-original="imagenes\Cinematic V2\Cinematic V2 Original.jpg" data-filtered="imagenes/Cinematic V2/Cinematic V2.jpg">
             <div class="button-group">
                 <a href="https://cuty.io/cinematicv2" target="blank">Descargar</a>
             </div>
