--- a/index.html
+++ b/index.html
@@ -430,6 +430,55 @@
                 <a href="https://cuty.io/beachvibes" target="blank">Descargar</a>
             </div>
         </div>
+
+        <div class="card">
+            <h3>Night Vision</h3>
+            <p class="status">Preset</p>
+            <img src="imagenes/Night Vision/Night visión.jpg" alt="Filtro 52" data-original="imagenes\Night Vision\Night visión original.jpg" data-filtered="imagenes/Night Vision/Night visión.jpg">
+            <div class="button-group">
+                <a href="https://cuty.io/NightVisionn" target="blank">Descargar</a>
+            </div>
+        </div>
+        <div class="card">
+            <h3>Retrograde</h3>
+            <p class="status">Preset</p>
+            <img src="imagenes/Retrograde/Retrograde.jpg" alt="Filtro 53" data-original="imagenes\Retrograde\Retrograde Original.jpg" data-filtered="imagenes/Retrograde/Retrograde.jpg">
+            <div class="button-group">
+                <a href="https://cuty.io/retrograde" target="blank">Descargar</a>
+            </div>
+        </div>
+        <div class="card">
+            <h3>iPhone Xr Cam</h3>
+            <p class="status">Preset</p>
+            <img src="imagenes/Xr cam/Xr cam.jpg" alt="Filtro 54" data-original="imagenes\Xr cam\Xr cam original.jpg" data-filtered="imagenes/Xr cam/Xr cam.jpg">
+            <div class="button-group">
+                <a href="https://cuty.io/xrcam" target="blank">Descargar</a>
+            </div>
+        </div>
+        <div class="card">
+            <h3>VSCO Film</h3>
+            <p class="status">Preset</p>
+            <img src="imagenes/VSCO Film/VSCO Film.jpg" alt="Filtro 55" data-original="imagenes\VSCO Film\VSCO Film original.jpg" data-filtered="imagenes/VSCO Film/VSCO Film.jpg">
+            <div class="button-group">
+                <a href="https://cuty.io/vscofilm" target="blank">Descargar</a>
+            </div>
+        </div>
+        <div class="card">
+            <h3>Night Out</h3>
+            <p class="status">Preset</p>
+            <img src="imagenes/Night Out/Night out.jpg" alt="Filtro 56" data-original="imagenes\Night Out\Night out original.jpg" data-filtered="imagenes/Night Out/Night out.jpg">
+            <div class="button-group">
+                <a href="https://cuty.io/nightout" target="blank">Descargar</a>
+            </div>
+        </div>
+        <div class="card">
+            <h3>Wildlife</h3>
+            <p class="status">Preset</p>
+            <img src="imagenes/Wildlife/Wildlife.jpg" alt="Filtro 57" data-original="imagenes\Wildlife\Wildlife original.jpg" data-filtered="imagenes/Wildlife/Wildlife.jpg">
+            <div class="button-group">
+                <a href="https://cuty.io/wildlife" target="blank">Descargar</a>
+            </div>
+        </div>
     </main>
     <script src="funcion.js"></script>
 </body>
